[project]
name = "crafty-async-client"
version = "0.1.0"
description = "Async Python client for Crafty Controller API V2"
readme = "README.md"
requires-python = ">=3.10"
authors = [
	{ name = "Baiaman Sun" }
]
dependencies = [
	"aiohttp>=3.9"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
